# plantuml-server--b00t--togaf--mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.b00t  Dockerfile.rust  supervisord.conf
.github/workflows/: build-b00t-container.yml
src/: main.rs  plantuml.rs  routes.rs
