[package]
name = "plantuml-server-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Temp files
tempfile = "3.8"

# HTTP client (for health checks)
reqwest = { version = "0.12", features = ["json"] }

# PlantUML URL encoding/decoding
base64 = "0.22"
flate2 = "1.0"

# b00t ecosystem integration (via path to parent workspace)
# The following dependency is for integration with the b00t ecosystem.
# Uncomment the line below if building as part of the parent workspace where
# the '../b00t-ipc' crate exists. Otherwise, leave it commented to avoid build errors.
# b00t-ipc = { path = "../b00t-ipc", optional = true }

[lints]
workspace = true
